--- a/FloatingBubbleView/build.gradle
+++ b/FloatingBubbleView/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
+
+    id 'maven-publish'
 }
 
 android {
@@ -33,20 +35,34 @@ android {
         viewBinding true
     }
 
+
 }
 
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+//    implementation 'com.google.android.material:material:1.4.0'
+//    testImplementation 'junit:junit:4.+'
+//    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation "androidx.dynamicanimation:dynamicanimation:1.0.0"
 
+//    implementation "com.airbnb.android:lottie:3.7.1"
 
-    implementation "com.airbnb.android:lottie:3.7.1"
+}
 
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+
+                groupId = 'com.github.torrydo'
+                artifactId = 'floating-bubble-view'
+                version = '0.1.3'
+            }
+        }
+    }
 }
