--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,9 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+
+        maven { url 'https://jitpack.io' }
+
         jcenter() // Warning: this repository is going to shut down soon
     }
 }
