--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,11 +37,12 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
-    implementation project(path: ':FloatingBubbleView')
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-//    implementation 'com.github.TorryDo:Floating-Bubble-View:0.1.4'
+
+//    implementation project(path: ':FloatingBubbleView')
+    implementation 'com.github.TorryDo:Floating-Bubble-View:0.1.5'
 
 }
