--- a/settings.gradle
+++ b/settings.gradle
@@ -1,12 +1,16 @@
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        google()
+        mavenCentral()
+    }
+}
+
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
         google()
         mavenCentral()
-
-        maven { url 'https://jitpack.io' }
-
-        jcenter() // Warning: this repository is going to shut down soon
     }
 }
 rootProject.name = "TestFloatingBubble"
