--- a/gradle.properties
+++ b/gradle.properties
@@ -27,7 +27,8 @@ RELEASE_SIGNING_ENABLED=true
 
 GROUP=io.github.torrydo
 POM_ARTIFACT_ID=floating-bubble-view
-VERSION_NAME=0.3.3
+VERSION_NAME=0.3.4
+#prev: 0.3.3
 
 POM_NAME=FloatingBubbleView
 POM_PACKAGING=aar
