feat: fix bubble outside screen, add more api, replace hard assignment

--- a/FloatingBubbleView/build.gradle
+++ b/FloatingBubbleView/build.gradle
@@ -48,9 +48,9 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation("androidx.core:core-ktx:1.9.0")
+    implementation("androidx.appcompat:appcompat:1.5.1")
 
-    implementation "androidx.dynamicanimation:dynamicanimation:1.0.0"
+    implementation("androidx.dynamicanimation:dynamicanimation:1.0.0")
 
 }
