--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 }
 
 android {
-    compileSdk 33
+    compileSdk 31
 
     defaultConfig {
         applicationId "com.torrydo.testfloatingbubble"
         minSdk 21
-        targetSdk 33
+        targetSdk 31
         versionCode 1
         versionName "1.0"
 
@@ -33,8 +33,8 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.0'
+    implementation 'androidx.core:core-ktx:1.7.0' // prev" 1.7.0
+    implementation 'androidx.appcompat:appcompat:1.4.0' // prev: 1.4.0
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     testImplementation 'junit:junit:4.+'
@@ -44,7 +44,7 @@ dependencies {
 //    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.8.1'
 
     implementation project(path: ':FloatingBubbleView')
-//    implementation("io.github.torrydo:floating-bubble-view:0.3.2")
+//    implementation("io.github.torrydo:floating-bubble-view:0.3.4")
 //    implementation 'com.github.TorryDo:Floating-Bubble-View:0.1.6'
 
 }
