--- a/FloatingBubbleView/build.gradle
+++ b/FloatingBubbleView/build.gradle
@@ -4,6 +4,7 @@ plugins {
 
 //    id 'maven-publish'
     id 'com.vanniktech.maven.publish'
+    id("org.jetbrains.dokka")
 }
 
 android {
@@ -35,10 +36,10 @@ android {
         viewBinding true
     }
 
-
 }
 
 dependencies {
+
 
     implementation("androidx.core:core-ktx:1.6.0")
     implementation("androidx.appcompat:appcompat:1.4.0")
