--- a/FloatingBubbleView/build.gradle
+++ b/FloatingBubbleView/build.gradle
@@ -34,6 +34,12 @@ android {
     }
     buildFeatures {
         viewBinding true
+        compose true
+    }
+
+    composeOptions{
+        kotlinCompilerExtensionVersion "1.3.2"
+        kotlinCompilerVersion '1.3.2'
     }
 
 }
@@ -45,5 +51,11 @@ dependencies {
     implementation("androidx.appcompat:appcompat:1.4.0")
 
     implementation("androidx.dynamicanimation:dynamicanimation:1.0.0")
+
+    def compose_version = "1.3.1"
+    implementation "androidx.compose.foundation:foundation:${compose_version}"
+//    implementation "androidx.compose.ui:ui:$compose_version"
+
+
 
 }
