--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,8 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            signingConfig signingConfigs.debug
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -28,6 +29,15 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
+    }
+
+    buildFeatures {
+        compose true
+    }
+
+    composeOptions{
+        kotlinCompilerExtensionVersion "1.3.2"
+        kotlinCompilerVersion '1.3.2'
     }
 }
 
@@ -45,5 +55,10 @@ dependencies {
 
     implementation project(path: ':FloatingBubbleView')
 //    implementation("io.github.torrydo:floating-bubble-view:0.4.0")
+
+    def compose_version = "1.3.1"
+    implementation "androidx.compose.foundation:foundation:${compose_version}"
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.material3:material3:1.0.1"
 
 }
