add route, show/remove methods, refactor code

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <service
             android:name=".MyServiceKt"
             />
+        <receiver android:name=".FloatingBubbleReceiver" />
     </application>
 
 </manifest>
