fix child onClick/touch prevent bubble drag

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,6 @@ dependencies {
     implementation "androidx.compose.material3:material3:1.0.1"
     implementation "androidx.activity:activity-compose:1.6.1"
 
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
+
 }
