--- a/FloatingBubbleView/build.gradle
+++ b/FloatingBubbleView/build.gradle
@@ -53,8 +53,7 @@ dependencies {
 
     def compose_version = "1.3.1"
     implementation "androidx.compose.foundation:foundation:${compose_version}"
-//    implementation "androidx.compose.ui:ui:$compose_version"
 
-
+    implementation "io.github.torrydo:screen-easy:0.0.2"
 
 }
