--- a/FloatingBubbleView/build.gradle
+++ b/FloatingBubbleView/build.gradle
@@ -52,8 +52,8 @@ dependencies {
     implementation("androidx.dynamicanimation:dynamicanimation:1.0.0")
 
     def compose_version = "1.3.1"
-    implementation "androidx.compose.foundation:foundation:${compose_version}"
+    implementation "androidx.compose.foundation:foundation:$compose_version"
 
-    implementation "io.github.torrydo:screen-easy:0.0.2"
+    implementation "io.github.torrydo:screen-easy:0.0.3"
 
 }
