--- a/FloatingBubbleView/build.gradle
+++ b/FloatingBubbleView/build.gradle
@@ -37,7 +37,7 @@ android {
         compose true
     }
 
-    composeOptions{
+    composeOptions {
         kotlinCompilerExtensionVersion "1.3.2"
     }
 
@@ -45,15 +45,13 @@ android {
 
 dependencies {
 
-
     implementation("androidx.core:core-ktx:1.6.0")
     implementation("androidx.appcompat:appcompat:1.4.0")
 
     implementation("androidx.dynamicanimation:dynamicanimation:1.0.0")
 
-    def compose_version = "1.3.1"
-    implementation "androidx.compose.foundation:foundation:$compose_version"
+    implementation "androidx.compose.foundation:foundation:1.3.1"
 
-    implementation "io.github.torrydo:screen-easy:0.0.3"
+    implementation "io.github.torrydo:screen-easy:0.1.0"
 
 }
