--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,8 @@ dependencies {
 //    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.8.1'
 
     implementation project(path: ':FloatingBubbleView')
-//    implementation("io.github.torrydo:floating-bubble-view:0.4.0")
+//    implementation("io.github.torrydo:floating-bubble-view:0.5.5")
+//    implementation "io.github.torrydo:screen-easy:0.0.2"
 
     def compose_version = "1.3.1"
     implementation "androidx.compose.foundation:foundation:${compose_version}"
