--- a/gradle.properties
+++ b/gradle.properties
@@ -27,13 +27,13 @@ RELEASE_SIGNING_ENABLED=true
 
 GROUP=io.github.torrydo
 POM_ARTIFACT_ID=floating-bubble-view
-VERSION_NAME=0.5.5
-#prev: 0.5.4
+VERSION_NAME=0.5.6
+#prev: 0.5.5
 
 POM_NAME=FloatingBubbleView
 POM_PACKAGING=aar
 
-POM_DESCRIPTION=an Android library that makes it easier to create floating bubbles.
+POM_DESCRIPTION=an Android library that adds floating views on top of your screen, supports both XML and Jetpack Compose.
 POM_INCEPTION_YEAR=2022
 
 POM_URL=https://github.com/TorryDo/Floating-Bubble-View
