--- a/FloatingBubbleView/build.gradle
+++ b/FloatingBubbleView/build.gradle
@@ -33,7 +33,7 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures {
-        viewBinding true
+//        viewBinding true
         compose true
     }
 
@@ -45,13 +45,15 @@ android {
 
 dependencies {
 
-    implementation("androidx.core:core-ktx:1.6.0")
-    implementation("androidx.appcompat:appcompat:1.4.0")
+    implementation("androidx.core:core-ktx:1.10.1")
+//    implementation("androidx.appcompat:appcompat:1.6.1")
+//    implementation("androidx.lifecycle:lifecycle-service:2.6.1")
 
     implementation("androidx.dynamicanimation:dynamicanimation:1.0.0")
 
-    implementation "androidx.compose.foundation:foundation:1.3.1"
+    implementation("androidx.savedstate:savedstate:1.2.1")
+    implementation("androidx.compose.foundation:foundation:1.5.1")
 
-    implementation "io.github.torrydo:screen-easy:0.1.0"
+    implementation("io.github.torrydo:screen-easy:0.1.0")
 
 }
