fix: close-bubble being shown when click bubble

--- a/FloatingBubbleView/build.gradle
+++ b/FloatingBubbleView/build.gradle
@@ -40,6 +40,7 @@ android {
     composeOptions {
         kotlinCompilerExtensionVersion "1.3.2"
     }
+    namespace 'com.torrydo.floatingbubbleview'
 
 }
 
