--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ android {
         kotlinCompilerExtensionVersion "1.3.2"
         kotlinCompilerVersion '1.3.2'
     }
+    namespace 'com.torrydo.testfloatingbubble'
 }
 
 dependencies {
