--- a/gradle.properties
+++ b/gradle.properties
@@ -48,3 +48,6 @@ POM_LICENCE_DIST=repo
 POM_DEVELOPER_ID=TorryDo
 POM_DEVELOPER_NAME=Nguyen Do Tri
 POM_DEVELOPER_URL=https://github.com/TorryDo
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
