Bugfix/bubble touch (#65)
* increase XY dragging threshold of the bubble

* fix: close-bubble being shown when click bubble

* add triggerClickablePerimeterPx API, upgrade version, README

* update jdk 17 to fix github ci file

--- a/gradle.properties
+++ b/gradle.properties
@@ -27,8 +27,8 @@ RELEASE_SIGNING_ENABLED=true
 
 GROUP=io.github.torrydo
 POM_ARTIFACT_ID=floating-bubble-view
-VERSION_NAME=0.6.4
-#prev: 0.6.3
+VERSION_NAME=0.6.5
+#prev: 0.6.4
 
 POM_NAME=FloatingBubbleView
 POM_PACKAGING=aar
@@ -48,3 +48,6 @@ POM_LICENCE_DIST=repo
 POM_DEVELOPER_ID=TorryDo
 POM_DEVELOPER_NAME=Nguyen Do Tri
 POM_DEVELOPER_URL=https://github.com/TorryDo
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
